binary heap & priority queue completed

--- a/Бинарная-Куча/Бинарная-Куча.md
+++ b/Бинарная-Куча/Бинарная-Куча.md
@@ -1,1 +1,3 @@
 # Бинарная Куча
+
+Эта структура данных может быть реализована через такие структуры данных, как: бинарная куча, AVL-деревья, линейного списка. По сути операции удаления и вставки в очередь будут одинаковыми, но хранилище данных может иметь разню реализацию. Реализация AVL-дерева и линейного списка прилагается.
