--- a/МГС/МГС.md
+++ b/МГС/МГС.md
@@ -30,3 +30,11 @@
 Граф, используемый в решении задачи
 
 ![TSP](./1.png)
+
+## Решение задачи о рюкзаке методом исчерпывающего перебора
+
+Задача о рюкзаке решается полным перебором всевозможных способов поместить предметы в рюкза (МГС). Сложность будет O(2^n) (включен/не включен элемент в множество)
+
+## Решение задачи о назначениях методом исчерпывающего перебора
+
+Дано n сотрудников и n задач, каждая из которых стоит wi времени. Каждый сотрудник может выполнить задачу с определенной стоимостью. Нужно определить наименьшую стоимость решения всех задач. Данну задачу можно решить через МГС полным перебором.
