--- a/Графы&Деревья/Графы&Деревья.md
+++ b/Графы&Деревья/Графы&Деревья.md
@@ -1,1 +1,13 @@
 # Графы. Деревья
+
+## Алгоритм Воршалла
+
+Поиск транзитивного замыкания графа. Транзитивное замыкание графа - это булева матрица NxN, где на пересечении i-й строки и j-го столбца стоит 1, если существует нетривиальный путь между этими вершинами.
+
+## Алгоритм Флойда (Флойда-Воршалла)
+
+Поиск кратчайших путей между всеми парами вершин. Сложность O(V^3).
+
+## Жадные алгоритмы
+
+Жадный алгоритм — это алгоритм, который на каждом шагу делает локально наилучший выбор в надежде, что итоговое решение будет оптимальным.
