all tasks completed

--- a/Графы&Деревья/Графы&Деревья.md
+++ b/Графы&Деревья/Графы&Деревья.md
@@ -11,3 +11,21 @@
 ## Жадные алгоритмы
 
 Жадный алгоритм — это алгоритм, который на каждом шагу делает локально наилучший выбор в надежде, что итоговое решение будет оптимальным.
+
+## Система непересекающихся множеств (СНМ)
+
+Структура данных, которая имеет всего две операции:
+1. Union(x, y) - объединяет множество x и y.
+2. Find(x) - возвращается представителя множества, где находится элемент x.
+
+В нашем случае, алгоритм Крускала реализован на СНМ.
+
+## Алгоритм Прима/Крускала
+
+Поиск минимального остовного дерева.
+
+Минимальное остновное - дерево, где все вершины соеденены между собой ребрами минимальной стоимости.
+
+Граф, используемый в программе
+
+![Граф](./1.png)
